# Computational-Drug-Discovery

./: .gitattributes  .gitignore  QUICKSTART.md  README.md  pyproject.toml
.claude/: settings.local.json
.streamlit/: config.toml
app/: FRONTEND_SUMMARY.md  README.md  TESTING_CHECKLIST.md  app.py  main.py
app/core/: __init__.py  base_page.py  base_predictor.py  validators.py
app/pages/: __init__.py  about_page.py  admet_filter_page.py  batch_analysis_page.py  model_comparison_page.py  single_compound_page.py
app/utils/: __init__.py  admet_predictor.py  feature_extraction.py  feature_selector.py  model_loader.py  smiles_utils.py
models/: feature_selector_indices.npy  feature_selector_meta.json  lstm_pIC50_model.keras  random_forest_regressor_model.joblib  tokenizer.pkl
models/admet_models/: bbbp_model.pkl  bbbp_scaler.pkl  bbbp_tl_model.pkl  bbbp_tl_scaler.pkl  clintox_model.pkl  clintox_scaler.pkl  clintox_tl_model.pkl  clintox_tl_scaler.pkl  solubility_model.pkl  solubility_scaler.pkl  solubility_tl_model.pkl  solubility_tl_scaler.pkl  toxicity_model.pkl  toxicity_scaler.pkl  toxicity_tl_model.pkl  toxicity_tl_scaler.pkl
notebooks/: ADMET_Safety_Training.ipynb  ADMET_Safety_Training_executed.ipynb  ADMET_Transfer_Learning.ipynb  Drugs_discovery_LSTM_ipynb.ipynb  admet_tl_predictions.csv
src/: __init__.py
src/models/: __init__.py  admet_safety_model.py  admet_transfer_learning.py
