[project]
name = "bio-screennet"
version = "0.1.0"
description = "Multi-Stage AI-Powered Drug Discovery Pipeline"
authors = [
    { name = "Lê Trung Tuyến", email = "letrungtuyen2002@gmail.com" },
    { name = "Bùi Hoàng Nhân" }
]
readme = "README.md"
requires-python = ">=3.8,<3.12"
license = { text = "MIT" }
keywords = ["drug-discovery", "machine-learning", "deep-learning", "cheminformatics", "ADMET"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    # Core Data Science
    "numpy>=1.21.0,<2.0.0",
    "pandas>=1.3.0,<3.0.0",
    "scipy>=1.7.0",
    
    # Machine Learning
    "scikit-learn>=1.0.0",
    "xgboost>=1.5.0",
    "lightgbm>=3.3.0",
    "imbalanced-learn>=0.9.0",
    
    # Deep Learning
    "tensorflow>=2.8.0,<2.16.0",
    "keras>=2.8.0,<3.0.0",
    
    # Cheminformatics
    "rdkit>=2022.3.1",
    "deepchem>=2.6.0",
    "chembl-webresource-client>=0.10.0",
    
    # Visualization
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
    
    # Explainability
    "shap>=0.41.0",
    "lime>=0.2.0",
    
    # Web Application
    "streamlit>=1.20.0",
    "streamlit-aggrid>=0.3.0",
    
    # Utilities
    "pyyaml>=6.0",
    "python-dotenv>=0.19.0",
    "tqdm>=4.62.0",
    "requests>=2.27.0",
    
    # Jupyter
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "ipywidgets>=7.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "isort>=5.10.0",
    "mypy>=0.950",
    "pre-commit>=2.17.0",
]

docs = [
    "sphinx>=4.5.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.17.0",
]

[project.urls]
Homepage = "https://github.com/TuyenTrungLe/Computational-Drug-Discovery"
Repository = "https://github.com/TuyenTrungLe/Computational-Drug-Discovery"
Documentation = "https://github.com/TuyenTrungLe/Computational-Drug-Discovery/blob/main/README.md"
"Bug Tracker" = "https://github.com/TuyenTrungLe/Computational-Drug-Discovery/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html --cov-report=term"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
