[project]
name = "bio-screennet"
version = "0.1.0"
description = "Multi-Stage AI-Powered Drug Discovery Pipeline"
authors = [
    { name = "Lê Trung Tuyến", email = "letrungtuyen2002@gmail.com" },
    { name = "Bùi Hoàng Nhân" }
]
readme = "README.md"
requires-python = ">=3.9,<3.13"
license = { text = "MIT" }
keywords = ["drug-discovery", "machine-learning", "deep-learning", "cheminformatics", "ADMET"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    # Core Data Science
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.0.0,<3.0.0",
    "scipy>=1.10.0",
    
    # Machine Learning (Core - Essential)
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    
    # Deep Learning (Optional - for LSTM models)
    "tensorflow>=2.13.0,<2.16.0; python_version<'3.12'",
    "keras>=2.13.0,<3.0.0; python_version<'3.12'",
    
    # Cheminformatics (Essential for SMILES processing)
    "rdkit>=2023.3.1",
    
    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.14.0",
    
    # Explainability (Optional)
    "shap>=0.42.0",
    
    # Web Application (Essential)
    "streamlit>=1.28.0",
    
    # Utilities
    "tqdm>=4.65.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "isort>=5.10.0",
    "mypy>=0.950",
    "pre-commit>=2.17.0",
]

docs = [
    "sphinx>=4.5.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.17.0",
]

[project.urls]
Homepage = "https://github.com/TuyenTrungLe/Computational-Drug-Discovery"
Repository = "https://github.com/TuyenTrungLe/Computational-Drug-Discovery"
Documentation = "https://github.com/TuyenTrungLe/Computational-Drug-Discovery/blob/main/README.md"
"Bug Tracker" = "https://github.com/TuyenTrungLe/Computational-Drug-Discovery/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html --cov-report=term"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
